[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://Main/FingerPaint-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1240.0
margin_bottom = 283.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 156.0
margin_bottom = 283.0

[node name="timeElapsed" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 156.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.478431, 0.368627, 0.0901961, 1 )
custom_colors/font_color_shadow = Color( 0.478431, 0.368627, 0.0901961, 1 )
text = "Day 0 hour 0"

[node name="hp" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 156.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.388235, 0.0823529, 0.0823529, 1 )
custom_colors/font_color_shadow = Color( 0.388235, 0.0823529, 0.0823529, 1 )
text = "HP: 130/130"

[node name="action" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 156.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.223529, 0.215686, 0.494118, 1 )

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 160.0
margin_right = 1078.0
margin_bottom = 283.0
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 1082.0
margin_right = 1240.0
margin_bottom = 283.0

[node name="strength" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 158.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.301961, 0.0980392, 0.0352941, 1 )
text = "Strength 0"
align = 2

[node name="meditation" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 41.0
margin_right = 158.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.0313726, 0.223529, 0.117647, 1 )
text = "Meditation 0"
align = 2

[node name="separator" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 82.0
margin_right = 158.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.223529, 0.215686, 0.494118, 1 )
align = 2

[node name="inventory" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 123.0
margin_right = 158.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.223529, 0.215686, 0.494118, 1 )
text = "Inventory:"
align = 2

[node name="slot1" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 164.0
margin_right = 158.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.223529, 0.215686, 0.494118, 1 )
text = "-"
align = 2

[node name="slot2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 205.0
margin_right = 158.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.223529, 0.215686, 0.494118, 1 )
align = 2

[node name="slot3" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 246.0
margin_right = 158.0
margin_bottom = 283.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.223529, 0.215686, 0.494118, 1 )
align = 2

[node name="Choices" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.93042
margin_bottom = -0.93042

[node name="Container" type="HBoxContainer" parent="Choices"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = -151.0
margin_right = -200.0
margin_bottom = -151.0
grow_horizontal = 2
rect_scale = Vector2( 1.00849, 1.00897 )
alignment = 1

[node name="Exercise" type="Button" parent="Choices/Container"]
visible = false
margin_top = 330.0
margin_right = 1792.0
margin_bottom = 390.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.301961, 0.0980392, 0.0352941, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Exercise"
flat = true

[node name="Meditate" type="Button" parent="Choices/Container"]
visible = false
margin_left = 898.0
margin_top = 330.0
margin_right = 1792.0
margin_bottom = 390.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0313726, 0.223529, 0.117647, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Meditate"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="Choices/Container"]
editor/display_folded = true
visible = false
margin_right = 1792.0
margin_bottom = 720.0
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Choices/Container/VBoxContainer"]
margin_top = 356.0
margin_right = 1792.0
margin_bottom = 356.0
alignment = 1

[node name="1" type="Button" parent="Choices/Container/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 894.0
margin_bottom = 60.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0313726, 0.223529, 0.117647, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Be silent."
flat = true

[node name="2" type="Button" parent="Choices/Container/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 1792.0
margin_bottom = 60.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.301961, 0.0980392, 0.0352941, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Join a fight."
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Choices/Container/VBoxContainer"]
margin_top = 360.0
margin_right = 1792.0
margin_bottom = 360.0

[node name="3" type="Button" parent="Choices/Container/VBoxContainer/HBoxContainer2"]
visible = false
margin_right = 1792.0
margin_bottom = 60.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.301961, 0.0980392, 0.0352941, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Attack the merchant."
flat = true
align = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="Choices/Container/VBoxContainer"]
margin_top = 364.0
margin_right = 1792.0
margin_bottom = 364.0

[node name="4" type="Button" parent="Choices/Container/VBoxContainer/HBoxContainer3"]
visible = false
margin_right = 1792.0
margin_bottom = 60.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0313726, 0.223529, 0.117647, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Convince the merchant to meditate with you."
flat = true
align = 0

[node name="Speak" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.93042
margin_bottom = -0.93042

[node name="Container" type="HBoxContainer" parent="Speak"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = -151.0
margin_right = -400.0
margin_bottom = -151.0
rect_scale = Vector2( 1.00849, 1.00897 )
alignment = 1

[node name="Text" type="Label" parent="Speak/Container"]
margin_top = 341.0
margin_right = 480.0
margin_bottom = 378.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.168627, 0.239216, 0.392157, 1 )
text = "\"The Unknown Nude\""
align = 1
autowrap = true

[node name="Fight" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.93042
margin_bottom = -0.93042

[node name="Container" type="HBoxContainer" parent="Fight"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = -151.0
margin_right = -400.0
margin_bottom = -151.0
rect_scale = Vector2( 1.00849, 1.00897 )
alignment = 1

[node name="Text" type="Label" parent="Fight/Container"]
margin_top = 341.0
margin_right = 480.0
margin_bottom = 378.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.168627, 0.239216, 0.392157, 1 )
text = "You join the terrible fight"
align = 1
autowrap = true

[node name="Win" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.93042
margin_bottom = -0.93042

[node name="Container" type="HBoxContainer" parent="Win"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = -151.0
margin_right = -400.0
margin_bottom = -151.0
rect_scale = Vector2( 1.00849, 1.00897 )
alignment = 1

[node name="Text" type="Label" parent="Win/Container"]
margin_top = 341.0
margin_right = 480.0
margin_bottom = 378.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.168627, 0.239216, 0.392157, 1 )
align = 1
autowrap = true

[connection signal="pressed" from="Choices/Container/Exercise" to="." method="_on_Exercise_pressed"]
[connection signal="pressed" from="Choices/Container/Meditate" to="." method="_on_Meditate_pressed"]
[connection signal="pressed" from="Choices/Container/VBoxContainer/HBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="Choices/Container/VBoxContainer/HBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="Choices/Container/VBoxContainer/HBoxContainer2/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Choices/Container/VBoxContainer/HBoxContainer3/4" to="." method="_on_4_pressed"]
